@@ -9,6 +9,7 @@
 	<key>comment</key>
         <string>Changelog:
 2.4b3
+- [Feature] Quick Connect field accepts URLs as input
 - [Bugfix] Deleting more than 10 files at once
 - [Bugfix] Typing in transfer window causes crash
 - [Bugfix] Transcript causes crash
